fix word wrapping

--- a/src/styles/base.pcss
+++ b/src/styles/base.pcss
@@ -149,7 +149,7 @@
       background-color: rgb(var(--color-card));
       border-radius: theme("borderRadius.DEFAULT");
       padding: theme("spacing.1");
-      word-break: break-words;
+      overflow-wrap: break-word;
       &::before, &::after { content: none; }
     }
 
